  * don't ever delete anything.
  * keep the format consistent (79 char width, M/D/Y date format) and do not
    use tabs but use spaces for formatting

Also see https://github.com/MDAnalysis/mdanalysis/wiki/MDAnalysisTests
and https://github.com/MDAnalysis/mdanalysis/wiki/UnitTests

------------------------------------------------------------------------------
??/??/16 manuel.nuno.melo

  * 0.14.0

    - Made memleak testing python 3 compliant (Issue 662). It may be a moot
      point since python 3.4 now cleverly deals with leaks.

01/16/16 orbeckst
  * 0.13.0

    - removed ez_setup.py

09/07/2015 manuel.nuno.melo, orbeckst
  * 0.11.0

    - Overhaul of the test subsystem.
    - Tests now implement nose plugins, as a submodule. (Issue 331)
      Available plugins are: memleak testing, stderr capturing (for quieter
      test runs), and proper knownfailure implementation (Issue 338).
    - renamed test_selections.py to test_atomselections.py
    - new test_selections.py is now testing MDAnalysis.selections
      (Issue #353)
    - Added new DIMS DCD test datafile
    - Added tests for PSAnalysis
    - Update TPR parser tests for Gromacs 5

02/11/2012 orbeckst, seb-buch

  * 0.7.5

    - test package is now called 'MDAnalysisTests'
    - tests AND data are now bundled together in MDAnalysisTests
    - MDAnalysis and MDAnalysisTests packages MUST have the same
      release number (they need to stay in sync); MDAnalysisTests
      will NOT run if a release mismatch is detected
    - see Issue #87 and 
      https://github.com/MDAnalysis/mdanalysis/wiki/UnitTests


09/07/2011 orbeckst

  * 0.7.4

    - Split off test data trajectories and structures from
      MDAnalaysis/tests/data into separate package. (Issue 28) 

    - Numbering matches the earliest MDAnalysis release for which the data is
      needed. Any later releases of MDAnalysis will also use these test data
      unless a MDAnalysisTestData package with a higher release number is
      available.